--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,9 @@
         <button name="action" value="rewind_3">⏪ Rewind 3s</button>
         <button name="action" value="forward_3">⏩ Forward 3s</button><br>
         <button name="action" value="rewind_10">⏪ Rewind 10s</button>
-        <button name="action" value="forward_10">⏩ Forward 10s</button>
+        <button name="action" value="forward_10">⏩ Forward 10s</button><br><br>
+        <button name="action" value="volume_down">🔉 Volume Down</button>
+        <button name="action" value="volume_up">🔊 Volume Up</button>
     </form>
 </body>
 </html>
